syntax = "proto3";

package mu.micro.book.srv.auth;

service Service {
    rpc MakeAccessToken (AuthRequest) returns (AuthResponse) {}
    rpc DelUserAccessToken (AuthRequest) returns (AuthResponse) {}
}

message Error {
    int32 code = 1;
    string detail = 2;
}

message AuthRequest {
    uint64 userId = 1;
    string userName = 2;
    string token = 3;
}

message AuthResponse {
    bool success = 1;
    Error error = 2;
    string token = 3;
}