syntax = "proto3";

package mu.micro.book.srv.user;

service User {
	rpc QueryUserByName (UserRequest) returns (UserResponse) {
	}
}

message user {
	int64 id = 1;
	string name = 2;
	string pwd = 3;
	uint64 createdTime = 4;
	uint64 updatedTime = 5;
}

message Error {
	int32 code = 1;
	string detail = 2;
}

message UserRequest {
	string userID = 1;
	string userName = 2;
	string userPwd = 3;
}

message UserResponse {
	bool success = 1;
	Error error = 2;
	user user = 3;
}


//protoc --proto_path=. --go_out=. --micro_out=. proto/user/user.proto